--- a/shop_app_hw/app/src/main/res/layout/activity_main.xml
+++ b/shop_app_hw/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F4F2F2"
     tools:context=".MainActivity">
 
     <ScrollView
@@ -52,6 +53,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="3dp"
+                android:background="#F4F2F2"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -135,6 +138,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="3dp"
+                android:background="#F4F2F2"
                 android:orientation="horizontal">
 
                 <LinearLayout
