--- a/shop_app_hw/app/src/main/res/layout/activity_main.xml
+++ b/shop_app_hw/app/src/main/res/layout/activity_main.xml
@@ -255,6 +255,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -384,9 +385,29 @@
                     android:background="?android:attr/listDivider" />
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"></LinearLayout>
+                    android:layout_width="wrap_content"
+                    android:layout_height="100dp"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/button"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="8dp"
+                        android:layout_weight="1"
+                        android:onClick="UniversalIndexPage"
+                        android:text="環球影城首頁" />
+
+                    <Button
+                        android:id="@+id/button2"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="8dp"
+                        android:layout_weight="1"
+                        android:onClick="GoToUniversal"
+                        android:text="地圖" />
+                </LinearLayout>
 
             </LinearLayout>
 
